CAF-2274: Changes to audit web service contract to match audit definition schema supported types.
